# castex

./: .gitignore  README.md  SPECS.md  check.sh  pyproject.toml
scripts/: __init__.py  fetch_episode.py  migrate_braggoscope_urls.py  update.py  update_db.py  update_feed.py
src/castex/: __init__.py  classifier.py  config.py  db.py  feed.py  models.py  search.py  server.py  storage.py
src/castex/podcasts/: __init__.py  base.py  registry.py
src/castex/podcasts/in_our_time/: __init__.py  enricher.py  feed.py
src/castex/scraper/: __init__.py  bbc.py  wikipedia.py
src/castex/templates/: base.html  episode.html  index.html  results.html
tests/: __init__.py  conftest.py  test_classifier.py  test_config.py  test_db.py  test_feed.py  test_in_our_time_enricher.py  test_in_our_time_feed.py  test_models.py  test_podcasts_base.py  test_podcasts_registry.py  test_scraper.py  test_search.py  test_server.py  test_storage.py
tests/fixtures/: bbc_episode_new_format.html  bbc_episode_sample.html  wikipedia_sample.html
